--- a/pixi.toml
+++ b/pixi.toml
@@ -15,6 +15,7 @@ aeolus = ">=24.11.1.2,<25"
 matplotlib = ">=3.10.5,<4"
 pandas = ">=2.3.1,<3"
 f90nml = ">=1.4.4,<2"
+python-stratify = ">=0.4.0,<0.5"
 
 [pypi-dependencies]
 ncdump-rich = ">=0.5.2, <0.6"
